crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ' {( \" a \" \" a \", \" z \" \" z \" )  }'::textmultirange;"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    TypeCast@7..58
      AConst@7..42
        Sconst@7..42 "' {( \" a \" \" a \", \" z ..."
      Typecast@42..44 "::"
      TypeName@44..58
        Ident@44..58 "textmultirange"
  Ascii59@58..59 ";"

