crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@180.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numrange(2,null) <@ nummultirange(numrange(null,null));"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..59
      FuncCall@7..22
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..17
          Iconst@16..17 "2"
        Ascii44@17..18 ","
        AConst@18..22
          NullP@18..22 "null"
      Ascii41@22..23 ")"
      Whitespace@23..24 " "
      Op@24..26 "<@"
      Whitespace@26..27 " "
      FuncCall@27..59
        Ident@27..40 "nummultirange"
        Ascii40@40..41 "("
        FuncCall@41..59
          Ident@41..49 "numrange"
          Ascii40@49..50 "("
          AConst@50..54
            NullP@50..54 "null"
          Ascii44@54..55 ","
          AConst@55..59
            NullP@55..59 "null"
  Ascii41@59..60 ")"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

